M40.2a review notes: the graph order the javadoc promised is now the order you get
N2 was the real one, and bigger than "cosmetic": Scope's own compact constructor called Set.copyOf and
Map.copyOf, both of which return UNORDERED immutables. So the record scrambled the order at its own
boundary — a perfectly ordered build went in and a hash order came out, which is what the live echo
showed. Fixed at both ends: build by walking the graph's insertion-ordered node map (rather than the
unordered `authored` set), and preserve it with unmodifiable LinkedHash* instead of copyOf. Ids the
graph does not hold cannot have a graph position, so they follow in a stable order rather than being
dropped or arriving differently on each run. Two tests pin it, one feeding the ids in deliberately wrong.

N1 has a better answer than the review supposed: no surface prints a coverage figure without its
exclusions today, because `coverage` is a declared TABLE_VERB that does not ASSEMBLE — only `read`
does, so a coverage section renders the "not assembled yet" note and no number at all. That is correct
behaviour, but it is silent about M40.2, so the guard is written now while the surface is still empty:
a test that passes on the unassembled branch and, the day someone lights coverage up, demands the
exclusion ride into the table. The PDF leaves the session; a ratio alone there cannot be checked by
whoever receives it.

N3 recorded where the slice that breaks it will be standing: note() derives "services" as
everything-not-an-event, which is true with two reasons and false when M40.2b adds "silent by
construction". Bucket by reason then, not by string containment.

932 green; sweep clean.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0131t6bqqWuLdB82nuLhVGsq